rhdlc/test/compile-fail/file-resolution/no-module-multiple/expected.txt
error: file not found for module `a`
 --> top.rhdl:1:0
  |
1 | mod a;
  | ^^^^^^ ./test/compile-fail/file-resolution/no-module-multiple/a.rhdl : No such file or directory (os error 2)
error: file not found for module `a`
 --> top.rhdl:1:0
  |
1 | mod a;
  | ^^^^^^ ./test/compile-fail/file-resolution/no-module-multiple/a/mod.rhdl : No such file or directory (os error 2)
error: file not found for module `b`
 --> top.rhdl:2:0
  |
2 | mod b;
  | ^^^^^^ ./test/compile-fail/file-resolution/no-module-multiple/b.rhdl : No such file or directory (os error 2)
error: file not found for module `b`
 --> top.rhdl:2:0
  |
2 | mod b;
  | ^^^^^^ ./test/compile-fail/file-resolution/no-module-multiple/b/mod.rhdl : No such file or directory (os error 2)
error: file not found for module `c`
 --> top.rhdl:3:0
  |
3 | mod c;
  | ^^^^^^ ./test/compile-fail/file-resolution/no-module-multiple/c.rhdl : No such file or directory (os error 2)
error: file not found for module `c`
 --> top.rhdl:3:0
  |
3 | mod c;
  | ^^^^^^ ./test/compile-fail/file-resolution/no-module-multiple/c/mod.rhdl : No such file or directory (os error 2)
error: file not found for module `e`
 --> top.rhdl:5:0
  |
5 | mod e;
  | ^^^^^^ ./test/compile-fail/file-resolution/no-module-multiple/e.rhdl : No such file or directory (os error 2)
error: file not found for module `e`
 --> top.rhdl:5:0
  |
5 | mod e;
  | ^^^^^^ ./test/compile-fail/file-resolution/no-module-multiple/e/mod.rhdl : No such file or directory (os error 2)
